RESOLVED FIXED195524
[ContentChangeObserver] Fix failing test cases
https://bugs.webkit.org/show_bug.cgi?id=195524
Summary [ContentChangeObserver] Fix failing test cases
alan
Reported 2019-03-09 17:03:07 PST
click-instead-of-hover-simple.html and stuck-with-hover-state.html are failing.
Attachments
Patch (7.09 KB, patch)
2019-03-09 17:28 PST, alan
no flags
Patch (8.88 KB, patch)
2019-03-09 21:25 PST, alan
no flags
Patch (8.95 KB, patch)
2019-03-09 21:26 PST, alan
no flags
alan
Comment 1 2019-03-09 17:28:18 PST
Radar WebKit Bug Importer
Comment 2 2019-03-09 17:28:32 PST
Radar WebKit Bug Importer
Comment 3 2019-03-09 17:28:32 PST
alan
Comment 4 2019-03-09 21:25:17 PST
alan
Comment 5 2019-03-09 21:26:45 PST
WebKit Commit Bot
Comment 6 2019-03-10 13:09:00 PDT
Comment on attachment 364167 [details] Patch Clearing flags on attachment: 364167 Committed r242689: <https://trac.webkit.org/changeset/242689>
WebKit Commit Bot
Comment 7 2019-03-10 13:09:01 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.